# selfclaw

./: .gitignore  QUICK_START.md  README.md
backend/: .env.example  clean_database.py  database.py  main.py  models.py  requirements.txt  schemas.py  security.py  services.py  terminal.py
docs/: CLEANUP_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  LOGGING_SUMMARY.md  PACKAGING_SUMMARY.md  PUBLISHING_GUIDE.md  SDD.md  TASK_PLAN.md  TERMINAL_DESIGN.md  VALIDATION_GUIDE.md  用户需求与问题记录.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Chat.jsx  Sidebar.jsx  api.js  index.css
package/: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  final_verification.sh  package.json  pyproject.toml  requirements.txt  setup.py  simple_build.sh  test_package.py
package/selfclaw/: __init__.py  cli.py
